Fix gap on galaxy mobile

--- a/lll-site.css
+++ b/lll-site.css
@@ -1133,7 +1133,7 @@ cite::before {
     }
 
     #prof_bg .item3, #ease_bg .item3  {
-      height: auto;
+      height: 2550px;
     }
     #llc_bg .item3 {
       height: auto;
